--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Yushan Jayasekara
-logo: /assets/img/PSX_20221206_141540.jpg
+logo: /assets/img/DIN_1924.JPG
 description: Data Analyst / Data Engineer (ETL, AWS)
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
